# EverybodyEdits2

./: .gitignore  CMakeLists.txt  EverybodyEdits2  License  Makefile  ReadMe.md
configs/: settings.json  tileset.pyxel
configs/assets/: classic.pyxel  default.pyxel
configs/assets/.dev/: classic-bg.pyxel  classic-fg.pyxel
docs/: TechnicalSheet.md  UML_Format.puml
inc/: EverybodyEdits2.hpp
inc/base/: Assets.hpp  Configs.hpp  Context.hpp  Framework.hpp  Logging.hpp
inc/class/: Assets.hpp  Configs.hpp  Context.hpp  Framework.hpp  Interface.hpp  Logging.hpp  MapChunk.hpp  TileMap.hpp  Tiles.hpp  World.hpp
inc/core/: generic.hpp  more_types.hpp
inc/game/: Camera.hpp  GameController.hpp  GameView.hpp  Player.hpp  Selector.hpp  Tile.hpp  TileSelector.hpp  View.hpp  World.hpp
inc/utils/: CommonTiles.hpp  Settings.hpp
include/base/: Framework.hpp
include/game/: Camera.hpp  Player.hpp  Tile.hpp
include/menu/: WorldSelector.hpp
include/utils/: CommonTiles.hpp  NonCopyable.hpp
src/: main.cpp
src/base/: Assets.cpp  Configs.cpp  Context.cpp  Framework.cpp  Logging.cpp
src/class/: Assets.cpp  Configs.cpp  Context.cpp  Framework.cpp  Interface.cpp  Logging.cpp  MapChunk.cpp  Tile.cpp  TileMap.cpp  Tiles.cpp  World.cpp
src/core/: drawing.cpp  events.cpp  io_stream.cpp  logic.cpp  main.cpp  predicates.cpp  saving.cpp  sections.cpp  setup.cpp  testing.cpp
src/game/: Camera.cpp  GameController.cpp  GameView.cpp  Player.cpp  Selector.cpp  Tile.cpp  TileSelector.cpp  View.cpp  World.cpp
src/menu/: WorldSelector.cpp
